kubernetes/monitoring/.deprecated-monitoring/exporter-tautulli/exporter-tautulli.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exporter-tautulli
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: exporter-tautulli
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: exporter-tautulli
    spec:
      containers:
      - name: exporter-tautulli
        ports:
        - containerPort: 8181
        image: linuxserver/tautulli
        resources:
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
          - name: tautulli
            mountPath: /config
      volumes:
        - name: tautulli
          persistentVolumeClaim:
            claimName: exporter-tautulli-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: exporter-tautulli
  name: exporter-tautulli
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8181
  selector:
    k8s-app: exporter-tautulli
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exporter-tautulli
  namespace: monitoring
spec:
  rules:
  - host: tautulli.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: exporter-tautulli
          servicePort: 80
